--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,6 @@
     <string name="error_get_movie_list">An error occurred while trying to get the movies. Please, try again.</string>
     <string name="orderby_dialog_title">Select the list\'s ordenation</string>
     <string name="select">Select</string>
-    <string name="sortby_rating">Rating</string>
-    <string name="sortby_popular">Popular</string>
     <string name="refresh">Refresh</string>
     <string name="sort">Sort</string>
     <string name="movie_detail">Movie detail</string>
@@ -14,9 +12,9 @@
     <string name="user_rate">User rate</string>
     <string name="cancel">Cancel</string>
     <string name="movie_detail_poster_content_description">This is the poster of the detailed movie</string>
-    <string name="tab_popular">Popular</string>
-    <string name="tab_rating">Rating</string>
-    <string name="tab_favorite">Favorite</string>
+    <string name="popular">Popular</string>
+    <string name="rating">Rating</string>
+    <string name="favorite">Favorite</string>
     <string name="movie_detail_backdrop_content_description">Backdrop of the movie\'s detail</string>
     <string name="empty_favorite_list">Your favorite movie list is empty. \nYou can add movies tapping on the heart in detail\'s screen :)</string>
     <string name="reviews">Reviews</string>
@@ -34,4 +32,6 @@
     <string name="press_the_button_to_watch_the_trailer">Press the button to watch the trailer</string>
     <string name="youtube">YouTube</string>
     <string name="screen_size_trailer">%1$dp</string>
+    <string name="all_reviews">All reviews</string>
+    <string name="all_trailers">All trailers</string>
 </resources>
