--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="screen_size_trailer">%1$dp</string>
     <string name="all_reviews">All reviews</string>
     <string name="all_trailers">All trailers</string>
+    <string name="detail">Detail</string>
 </resources>
