--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,9 @@
     <string name="browse">Browse</string>
     <string name="cinema">Cinema</string>
     <string name="see_all">See all</string>
-
-
-
     <string name="title_activity_main">Popular Movies</string>
     <string name="try_again">Try again</string>
     <string name="error_get_movie_list">An error occurred while trying to get the movies. Please, try again.</string>
-    <string name="orderby_dialog_title">Select the list\'s ordenation</string>
-    <string name="select">Select</string>
-    <string name="refresh">Refresh</string>
-    <string name="sort">Sort</string>
-    <string name="movie_detail">Movie detail</string>
-    <string name="release_date">Release date</string>
-    <string name="user_rate">User rate</string>
-    <string name="cancel">Cancel</string>
-    <string name="movie_detail_poster_content_description">This is the poster of the detailed movie</string>
     <string name="popular">Popular</string>
     <string name="rating">Rating</string>
     <string name="favorite">Favorite</string>
@@ -30,19 +18,16 @@
     <string name="success_remove_favorite_movie">Removed the movie from favorite list</string>
     <string name="success_add_favorite_movie">Added the movie to the favorite list</string>
     <string name="read_more">Read more</string>
-    <string name="show_all_reviews">Show all reviews</string>
     <string name="the_list_is_empty">The list is empty</string>
-    <string name="there_is_no_reviews_to_show">There is no reviews to show</string>
     <string name="trailers">Trailers</string>
-    <string name="show_all_trailers">Show all trailers</string>
-    <string name="there_is_no_trailers_to_show">There is no trailers to show</string>
-    <string name="press_the_button_to_watch_the_trailer">Press the button to watch the trailer</string>
     <string name="youtube">YouTube</string>
     <string name="screen_size_trailer">%1$dp</string>
     <string name="all_reviews">All reviews</string>
     <string name="all_trailers">All trailers</string>
-    <string name="detail">Detail</string>
-    <string name="dont_know_the_name_separator">|</string>
+    <string name="pipe_separator">|</string>
     <string name="list_view_type">List view type</string>
     <string name="default_date_format">yyyy-MM-dd</string>
+    <string name="overview">Overview</string>
+    <string name="movie_runtime_format">%1$sh %2$sm</string>
+    <string name="read_all_reviews_format">Read all reviews (%1$s)</string>
 </resources>
