--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="cast">Cast</string>
     <string name="search">Search…</string>
     <string name="type_at_least_three_characters">Type at least 3 characters</string>
+    <string name="search_for_movies_here">Search for movies here</string>
 </resources>
