--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="search_for_movies_here">Search for movies here</string>
     <string name="oops">Oops</string>
     <string name="error_something_went_wrong">Uhh… Unfortunately something went wrong. Please, try again</string>
+    <string name="recommendations">Recommendations</string>
 </resources>
