--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="error_something_went_wrong">Uhh… Unfortunately something went wrong. Please, try again</string>
     <string name="recommendations">Recommendations</string>
     <string name="sort">Sort</string>
+    <string name="select_the_sort">Select the sort</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="added_order">Added order</string>
+    <string name="release_date">Release date</string>
 </resources>
